--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,6 @@
 
 <resources>
-    <string name="app_name">Blue Box</string>
+    <string name="app_name">Free of Corona</string>
 
     <string name="info_1">Primeiro jogo da serie Box Games.</string>
     <string name="info_2">Desenvolvido por Guilherme Frota</string>
